[package]
name = "harfbuzz-bindings"
version = "0.1.0"
edition = "2021"
authors = ["Benjamin Eder <barny.eder@gmail.com>"]
license = "MIT"
description = "HarfBuzz text shaping engine bindings for Rust"
readme = "README.md"
repository = "https://github.com/bennyboer/harfbuzz-bindings"
keywords = ["font", "text", "opentype"]
categories = ["external-ffi-bindings"]
links = "harfbuzz"
build = "build.rs"

[dependencies]

[build-dependencies]
bindgen = "0.64.0"
vcpkg = "0.2.15"
